--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?axlwgxdd#1" target="_blank">首页</a> | <a href="https://dl1ez95kskssm.cloudfront.net/1?vbikqc" target="_blank">动态网</a> | <a href="https://d124e4v75n9sum.cloudfront.net/2?dqlyzfelm" target="_blank">大纪元</a> | <a href="https://d1ot7p38i3wmt5.cloudfront.net/4?tqadpik" target="_blank">看中国</a> | <a href="https://dhw62qyyxrv4n.cloudfront.net/pHh5q?ntjdmz" target="_blank">新生网</a> | <a href="https://d7b58bkqqk9ju.cloudfront.net/tktpt?mletd" target="_blank">阿波罗网</a> | <a href="https://d1tuw6k1rjq3u6.cloudfront.net/Mjpvu?tgsynvac" target="_blank">干净世界</a> | <a href="https://doh73o6c3dnba.cloudfront.net/10?klwskguc" target="_blank">退党服务</a> | <a href="https://dtfavhq5d1ym2.cloudfront.net/Rffqf?ykyrhytaq" target="_blank">明慧广播</a> | <a href="https://d1fejrztdgsube.cloudfront.net/nw9Vn?xjvqqyou" target="_blank">传奇时代</a> | <a href="https://d3caox32lipp7h.cloudfront.net/AF9AG?kvwfo" target="_blank">新境界影视</a> | <a href="https://dvsmtoxipy5i5.cloudfront.net/zqMQA?zazhdtps" target="_blank">文昭谈论</a> | <a href="https://d1nm4aa0eu3bxh.cloudfront.net/7?zialsk" target="_blank">明慧</a></p><p><a href="https://d3twnfu6dd6xpm.cloudfront.net/9?usacx" target="_blank">大法</a> | <a href="https://d22owz1tif1d5u.cloudfront.net/3?hiydvbzr" target="_blank">新唐人</a> | <a href="https://d2cenl0crtmzsc.cloudfront.net/obAhT?aplddf" target="_blank">人民报</a> | <a href="https://d2wf95os3tobj4.cloudfront.net/xXNHu?bmfmxa" target="_blank">放光明</a> | <a href="https://dm41kyod3ht9r.cloudfront.net/5?xbcllht" target="_blank">新纪元</a> | <a href="https://d259d2wq6kf78s.cloudfront.net/6?myhhy" target="_blank">希望之声</a> | <a href="https://dvsmtoxipy5i5.cloudfront.net/11?dtfiavh" target="_blank">无界网络</a> | <a href="https://d2csrn8d5ncbve.cloudfront.net/Pueji?badnl" target="_blank">追查国际</a> | <a href="https://dkx26vh7i5y84.cloudfront.net/16?eiwtfua" target="_blank">明慧之窗</a> | <a href="https://d3vg08phoazui6.cloudfront.net/LdvzZ?opcasgzu" target="_blank">细语人生</a> | <a href="https://d1ucfc2ix2o07u.cloudfront.net/fBn3r?oiexd" target="_blank">新世纪影视</a> | <a href="https://dcz6rimunj42y.cloudfront.net/PUWMb?ioewqyxye" target="_blank">江峰时刻</a> | <a href="https://d2sn4gemyo21al.cloudfront.net/8?zddjqqfaj" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?tfzzju#1" target="_blank">首页</a> | <a href="https://dryak9kcfpt3j.cloudfront.net/1?bshkimw" target="_blank">动态网</a> | <a href="https://d3asbsenpgs1fq.cloudfront.net/2?ofknqp" target="_blank">大纪元</a> | <a href="https://d1nu9fv1hhdo43.cloudfront.net/4?oyytg" target="_blank">看中国</a> | <a href="https://dvucua6a0b85v.cloudfront.net/pHh5q?wyqktc" target="_blank">新生网</a> | <a href="https://d3l8osd9w9ntl9.cloudfront.net/tktpt?hadskiu" target="_blank">阿波罗网</a> | <a href="https://dryak9kcfpt3j.cloudfront.net/Mjpvu?kvawof" target="_blank">干净世界</a> | <a href="https://d1kgsi70b35buf.cloudfront.net/10?xmurc" target="_blank">退党服务</a> | <a href="https://d2b68ib2p4x8t6.cloudfront.net/Rffqf?pycfwoo" target="_blank">明慧广播</a> | <a href="https://d2wjsqtecmbuag.cloudfront.net/nw9Vn?mxyaght" target="_blank">传奇时代</a> | <a href="https://d10efcw5kfoez9.cloudfront.net/AF9AG?mllqgau" target="_blank">新境界影视</a> | <a href="https://d1b0mjr6ppvor4.cloudfront.net/zqMQA?hptgb" target="_blank">文昭谈论</a> | <a href="https://d2nbk5p6zab41i.cloudfront.net/7?yzovnbzk" target="_blank">明慧</a></p><p><a href="https://d37g5boc7rm625.cloudfront.net/9?vhijadus" target="_blank">大法</a> | <a href="https://d3ap8ixfubqypf.cloudfront.net/3?domst" target="_blank">新唐人</a> | <a href="https://dnuodzs8nln8v.cloudfront.net/obAhT?vruca" target="_blank">人民报</a> | <a href="https://d22owz1tif1d5u.cloudfront.net/xXNHu?jteui" target="_blank">放光明</a> | <a href="https://d21y52w6f35pla.cloudfront.net/5?xrvjnjvkk" target="_blank">新纪元</a> | <a href="https://ddtx9y1vir8bp.cloudfront.net/6?vhdww" target="_blank">希望之声</a> | <a href="https://dsqxb3b7muii1.cloudfront.net/11?ddzen" target="_blank">无界网络</a> | <a href="https://d3asbsenpgs1fq.cloudfront.net/Pueji?dalfncjhd" target="_blank">追查国际</a> | <a href="https://dnfbwsos78njn.cloudfront.net/16?upnvg" target="_blank">明慧之窗</a> | <a href="https://d14a0yccee2yym.cloudfront.net/LdvzZ?zoiqmma" target="_blank">细语人生</a> | <a href="https://d265ujbtchne9r.cloudfront.net/fBn3r?ceebbq" target="_blank">新世纪影视</a> | <a href="https://d3caox32lipp7h.cloudfront.net/PUWMb?jefign" target="_blank">江峰时刻</a> | <a href="https://d15m60lsma25jk.cloudfront.net/8?iucxvc" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308368.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290570-2407112241561160-600x400-1-320x200.jpg"><p align="center">中共在美加强攻击法轮功 美国务院关注</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308368.md#1" title="中共在美加强攻击法轮功 美国务院关注""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290570-2407112241561160-600x400-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308370.md#1" title="巴西客机坠毁 机上62人全部遇难""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308398-GettyImages-2165569436-320x200.jpg">&nbsp;</a>
@@ -13,8 +13,8 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307544.md#1" title="美房价飞涨 又有四城市房屋总价值超万亿美元""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/04/id13971320-ch136098044-700x420-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307960.md#1" title="中国市场疲软 国际消费品巨头正转向印度""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307971-GettyImages-451954408-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308384.md#1">华尔街大佬助力 川普在线活动筹得1500万美元</a><br>
-:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308368.md#1">中共在美加强攻击法轮功 美国务院关注</a><br>
+:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308384.md#1">华尔街大佬助力 川普在线活动筹得1500万美元</a><br>
+:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308368.md#1">中共在美加强攻击法轮功 美国务院关注</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308320.md#1">乌克兰扩大跨境袭击 大规模无人机袭利佩茨克</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307350.md#1">伴随美国国歌在赛前起飞 表演20年后白头鹰退役</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308370.md#1">巴西客机坠毁 机上62人全部遇难</a><br>
@@ -22,7 +22,7 @@
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308354.md#1">日本最大钢铁公司撤出中国转向美国和印度</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308363.md#1">美两党议员提立法 阻中国低额包裹涌入</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308358.md#1">风暴黛比席卷美国东部 华府发布暴洪预警</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308372.md#1">山东炭疽或已流传到河北 风险难估</a><br>
+:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308372.md#1">山东炭疽或已流传到河北 风险难估</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306829.md#1">陈梦战胜孙颖莎 球迷喝倒彩 背后黑幕重重</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a><br>
@@ -107,13 +107,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305500.md#1">民企高管被起诉同比升41% 业主被逼交出股权</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305394.md#1">遭封杀多年 吴秀波所持股权又被冻结</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305321.md#1">陈思诚新片《解密》票房遇冷 估计至少亏3亿</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d1zgt98ot94ism.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d1zgt98ot94ism.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 47,413</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://dtqtoaahuc16j.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://dtqtoaahuc16j.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 47,413</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 434,228,620 人
+!共 434,228,867 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307754.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307765-FireShot-Capture-1429--320x200.png"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307754.md#1">揭盗卖尸体案 律师易胜华相关发文被删</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307150.md#1">陈文清王小洪被列“恶人榜”递44国备制裁</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306810.md#1">课堂谈白纸运动遭威胁 市骨干教师逃离中国</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306371.md#1">贵州安顺强推火葬进村抢尸 遭居民激烈反抗</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306227.md#1">在微博痛批网证新规 清华教授遭永久禁言</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14302224.md#1">揭中共暴力逼迫法轮功学员放弃修炼的伎俩（三）</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308222.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308290-MixCollage-09-Aug-2024-03-35-PM-9264-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308222.md#1">中国知名车企高合汽车申请破产重整</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308133.md#1">中国7月核心CPI放缓至6个月低位 需求仍不足</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307551.md#1">自驾出租车增加 武汉网约车司机焦虑</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307383.md#1">美中芯片战下 中芯国际第二季获利大幅下滑</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307477.md#1">中国需求疲软 资生堂股价创37年来最大跌幅</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307320.md#1">中国二手房价续下跌 卖家不得不割肉离场</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307552.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308078-f0acb927aff03c4572b40dd3-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307552.md#1">【晚间新闻】谈美中关系 川普回应新唐人记者提问</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307549.md#1">【全球新闻】中共体制内涌现实名举报潮</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307548.md#1">【环球直击】报告：中共利用社媒造谣诋毁法轮功</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307546.md#1">【中国禁闻】中国爆盗卖遗体黑色产业链</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307617.md#1">中国持续高温 官方瞒报中暑死亡人数</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307528.md#1">中粮集团原副总周政被提起公诉 多人被查</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307994.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307999-FireShot-Capture-1431-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307994.md#1">云南男当街持刀杀人 目击者：死者疑为嫌犯妻</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307883.md#1">四川南充一医院病房天花板脱落 砸中产妇</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307253.md#1">海南一架小型飞机坠毁 机身印有“安防国际”</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14306983.md#1">云南村民被气象炮弹砸断腿 已截肢仍昏迷</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306509.md#1">八月飘雪 乌鲁木齐县发布暴雪预警</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306430.md#1">珠海一居民楼倒塌至少3死 疑煤气爆炸所致</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307613.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307626-1-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307613.md#1">盗卖数千尸体案 涉案企业实控者背景曝光</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307309.md#1">甘肃夫妻遭银行职员殴打 缝合几十针</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307374.md#1">奇瑞汽车要求3个员工干5个人的活 引发关注</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307141.md#1">勾结大陆人蛇集团伪造台湾护照 7人遭起诉</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307227.md#1">三退声明精选（2024/08/07）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306296.md#1">大陆各地持续高温 宜家成避暑之地</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14302373.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/08/id14302427-GettyImages-2154577153-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14302373.md#1">新剧中挑战农妇角色 杨幂的造型引争议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300362.md#1">巴黎奥运 中国女篮首战失利败给西班牙</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/28/n14299945.md#1">“北京中轴线”申遗成功 含毛纪念堂引争议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/27/n14299901.md#1">为玩“烟卡游戏” 四川六童偷六万元高档香烟</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/24/n14297646.md#1">陕师大教师给女生发不雅照？9年前被举报无果</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/20/n14294871.md#1">深圳一知名中学倒闭 千余师生被赶出学校</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284768.md#1">前高官：中共恐怖治国假话盛行 官员难善终</a><br>
